src/scss/_styles.scss
$primary-color: #062F4F;
$bg_color: #2c3e50;
$text_color: white;

.header {
    h1 {
        color: $bg_color;
        font-family: 'ZCOOL KuaiLe', cursive;
        font-size: 50px;
        margin: 0;

        @include media-breakpoint-down(sm){
            font-size: 24px;
        }
    }
}

.content {
    margin-top: 30px;
    margin-bottom: 30px;
    @include media-breakpoint-down(sm){
        margin-top: 0px;
    }
}

.navigation {
    border-bottom: 10px solid black;
    font-family: 'Sawarabi Gothic';

    // Makes dropdown trigger on hover
    // .dropdown:hover > .dropdown-menu {
    //     display: block;
    // }
    // .dropdown > .dropdown-toggle:active {
    //     /*Without this, clicking will make it sticky*/
    //     pointer-events: none;
    // }

    .nav-item {
        font-size: 20px;
        text-align: center;
    }
    .nav-item:hover {
        color: white;
        background: linear-gradient(180deg, #D48590 0%, #ECAC81 100%);
        border-radius: 6px;

    }
}

